<resources>
    <string name="app_name">AnimalDetectiveApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Data</string>
    <string name="title_upload">Upload</string>
    <string name="title_collection">Collection</string>

    <string name="gemini_api_key"></string>
    <string name="mapbox_access_token"></string>

</resources>