<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_data_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_upload_black_24dp"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection_black_24dp"
        android:title="@string/title_collection" />


</menu>